# VectorOS

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.en.md  README.md  README.zh-CN.md
config/: startup.vpp
control-plane/: Cargo.toml
control-plane/src/: cache.rs  main.rs
control-plane/src/api/: error.rs  handlers.rs  mod.rs  openapi.rs  response.rs  routes.rs  websocket.rs
control-plane/src/auth/: mod.rs
control-plane/src/config/: mod.rs
control-plane/src/db/: mod.rs
control-plane/src/security/: audit.rs  csrf.rs  headers.rs  mod.rs  rate_limit.rs  session.rs  validation.rs
control-plane/src/services/: config_cli.rs  config_io.rs  conntrack.rs  dhcp.rs  dhcp_server.rs  diag.rs  dns.rs  dns_server.rs  firewall.rs  flow.rs  frr.rs  impls.rs  ipv6.rs  logger.rs  logs.rs  manager.rs  mod.rs  monitor.rs  pppoe_auto.rs  qos.rs  traffic.rs  vpn.rs  vpp_acl.rs  vpp_ipsec.rs  vpp_tunnel.rs  vpp_wireguard.rs
control-plane/src/vpp/: client.rs  message.rs  mod.rs  native.rs  pppoe.rs
docs/: README.md  api-design.md  api-reference.md  api-test-report.md  architecture.md  configuration.md  deployment.md  development.md  ebpf-plan.md  landscape-analysis.md  openwrt-luci-analysis.md  opnsense-analysis.md  pfsense-analysis.md  troubleshooting.md  vyos-analysis.md
frontend/: package-lock.json  package.json  vite.config.ts
scripts/: vectoros-startup.sh
vpp-tools/: backup_manager.py  config_cli.py  config_manager.py  conntrack_manager.py  dhcp_manager.py  dhcpv6_manager.py  diag_manager.py  dns_manager.py  ebpf_manager.py  firewall_manager.py  monitor.py  (+20 more)
(+25 files in other folders)
