[package]
name = "vectoros-control-plane"
version = "0.1.0"
edition = "2021"
description = "VectorOS control plane - VPP-based router management"
license = "Apache-2.0"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "sync"] }

# Web framework
axum = { version = "0.7", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Config
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Byte encoding
bytes = "1"
byteorder = "1"

# System info
num_cpus = "1"

# Authentication
jsonwebtoken = "9"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
rusqlite = "0.40.0"
